--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,52 @@
-.dart_tool/ 
-build/ 
-ios/Pods/ 
-node_modules/ 
-.idea/ 
-.vscode/ 
+# =========================
+# Flutter / Dart
+# =========================
+.dart_tool/
+.packages
+build/
+flutter_*.png
+pubspec.lock
+.flutter-plugins
+.flutter-plugins-dependencies
+generated_plugin_registrant.dart
+
+# Android
+android/.gradle/
+android/captures/
+android/app/*.keystore
+android/key.properties
+android/local.properties
+android/app/google-services.json
+android/build/
+android/app/build/
+
+# =========================
+# Node.js / Backend
+# =========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+
+# Env / Config
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# =========================
+# OS / IDE
+# =========================
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.iml
+
+# Logs / Temp
+logs/
+*.log
+tmp/
+temp/
